Set flex-shrink to 0 Trying to fix how flex items are displayed on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,16 @@ html, body {
   height: 100%;
 }
 
+.frontpage-container > div:first-child {
+  flex-shrink: 0;
+}
+
+/* .frontpage-container {
+  display: grid;
+  place-items: center;
+  height: 100%;
+} */
+
 .all-pages-h1 {
   color: rgb(240, 0, 0);
 }
